--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,13 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>create new post</title>
+    <title>Post in Detail</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<form method="post" action="/posts">
-    <input type="text" placeholder="enter username" name="username"/> <br><br>
-    <textarea placeholder="write your post" name="content"></textarea><br>
-    <button>Submit post</button>
-</form>
+<h2>Here is your post in detail</h2>
+<p>Post ID: <%= post.id %></p>
+<div class="post">
+    <h3 class="user">@<%= post.username %></h3>
+    <h4><%= post.content %></h4>
+</div>
 </body>
 </html>
