--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,19 @@
 </head>
 <body>
 <h1>Quora Post </h1>
-</body>
-</html>
 
 <% for (post of posts) {%>
     <div class="post">
-         <h3 class="user">@<%= post.username %></h3>
+        <h3 class="user">@<%= post.username %></h3>
         <h4 class="content"><%= post.content %></h4>
+        <br>
+        <a href="http://localhost:8080/posts/<%=post.id%>">See in Detail</a>
     </div>
 
 <%}%>
+
+<br>
+<a href="http://localhost:8080/posts/new">Create New Post </a>
+</body>
+</html>
+
